--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 /public/hot
 /public/storage
 /storage/*.key
-/storage/framework
+/storage/framework/views/*
+/storage/framework/cache/*
+/storage/framework/sessions/*
 /storage/logs
 /vendor
 /.idea
